remove cache file

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=tapos007;database=fordocker"
+    "DefaultConnection": ""
   },
   "RedisSetup": {
     "MyRedisConStr": "localhost",
