--- a/JenkinsFile
+++ b/JenkinsFile
@@ -30,7 +30,8 @@ pipeline {
             steps {
                 echo 'push docker server Started..'
                 withCredentials([usernamePassword(credentialsId: "$registryCredential", passwordVariable: 'DOCKER_REGISTRY_PWD', usernameVariable: 'DOCKER_REGISTRY_USER')]) {
-                    sh "docker build . -t $registry:$BUILD_NUMBER  -f src/API/Dockerfile"
+                    sh "cd src/"
+                    sh "docker build . -t $registry:$BUILD_NUMBER  -f API/Dockerfile"
                     sh "docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PWD}"
                     sh "docker push $registry:$BUILD_NUMBER"
                 }
